src/style.scss
* {
    margin: 0;
    padding: 0;
}

$Satisfy:'Satisfy', cursive;
$Gabriela:'Gabriela', serif;
$Primary-Color:#CEB595;
$Secondary-Color:black;

.header {
    height: 200px;
    background-color:$Secondary-Color;
    margin-bottom: 80px;
}

.container {
    color: $Primary-Color;
    height: 17px;
}

.header-row {
    display: flex;
    flex-direction: row;
    float: right;
    margin-right: 55px;
    margin-top: 15px;
}

.header-row p{
    font-family: $Gabriela;
    padding-left: 15px;
    padding-right: 15px;
}

.header-row p:hover{ 
    color: $Secondary-Color;
    background-color: $Primary-Color;
    cursor: pointer;
}

.header-line {
    border-left: 3px solid $Primary-Color;
}



.header-title {
    font-family: $Satisfy;
    margin-left: 90px;
    margin-bottom: -11px;
    font-size: 120px;
    font-weight: 1;
    color:$Primary-Color;
   
}

.header-shadow {
    border-bottom: 2px solid #D6D3CC;
}

.void {
    font-family: $Gabriela;
    text-align: center;
    margin-bottom: 80px;
    margin-left: 300px;
    margin-right: 300px;
    font-size: x-large;
    margin-top: 30px;
}

// .void {
//     background-image: url("https://www.apollodesignscapes.com/media/catalog/product/cache/8/image/1000x1000/17f82f742ffe127f42dca9de82fb58b1/D/S/DSC-2x4-000116.jpg");
//     height: 500px;
//   background-attachment: fixed;
//   background-position: center;
//   background-repeat: no-repeat;
//   background-size: cover;
//     padding-top: 110px;
//     padding-bottom: 110px;
// }

.font {
    font-family: $Satisfy;
    color: $Secondary-Color;
    text-align: center;
    font-size: 80px;
}


.background {
    background-color: $Primary-Color;
    height: 100%;
}



.about-me-box {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 700px;
}

.slideshow {
   width: 50%;
   height: 700px;
}

.about-me-container {
    background-color:$Secondary-Color;
    width: 50%;
}

.about-me-title {
    font-size: 80px;
    text-align: center;
    margin-top: 20px;
    font-family: $Satisfy;
}

.about-me-container p {
    color: $Primary-Color;
}

.about-me-selfie {
    border-radius: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    height: 250px;
    width: 250px;
}

.about-me-author {
    text-align: center;
    font-size: large;
    font-family: $Gabriela;
}

.about-me-content {
    margin-bottom: 15px;
    text-align: left;
    margin-left: 15px;
    margin-right: 15px;
    font-family: $Gabriela;
}

.service-box {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 700px;
}

.service-img {
    width:50%
}

.service-title {
    font-size: 80px;
    text-align: center;
    margin-top: 20px;
    font-family: $Satisfy;
}

.service-content-img {
    border-radius: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    margin-top: 15px;
}

.service-content {
    margin-bottom: 15px;
    text-align: left;
    margin-left: 15px;
    margin-right: 15px;
    font-family: $Gabriela;
}

.testimonial-container {
    padding-top: 75px;
    padding-bottom: 50px;
    padding-left: 30px;
    padding-right: 30px;
    background-color: $Secondary-Color;
}

.testimonial-title {
    font-size: 80px;
    color: $Primary-Color;
    font-family: $Satisfy;
    text-align: center;
    margin-bottom: 25px;
}

.testimonial-card {
    display: flex;
    flex-direction: row;
    margin-bottom: 30px;
}


.testimonial-card p {
    font-size: large;
    color: $Primary-Color;
}

.testimonial-img {
    height: 100px;
    width: 100px;
    border-radius: 50%;
    margin-right: 20px
}

.testimonial-line {
    border-bottom: 3px solid $Primary-Color;
}


.footer-container {
    display: flex;
    justify-content: flex-end;
    background-color: $Secondary-Color;
    width: 100%;
    height: 200px;
    margin-top: 30px;
}

.footer-img {
    margin-top: 20px;
    margin-right: 20px;
}

.footer-plug {
    height: 50px;
    width: 50px;
}

.footer-font {
    color:$Primary-Color;
}

.calendar-container {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 500px;
}

.calendar-content {
    width: 50%;
    height: 500px;
    text-align: center;
}

.calendar-title {
    margin-top: 80px;
    display: flex;
    flex-direction: column;
    font-size: 80px;
    font-family: $Satisfy;
    color: $Secondary-Color;
    margin-bottom: 30px;
    margin-left: 50px;
    margin-right: 50px;
}

.calendar-schedule {
    font-family: $Gabriela;
    font-size: 30px;
    margin-top: 30px;
    line-height: 1.6;
}

.iframe {
    width: 52%;
    height: 495px;
  }
  
  .bottom-line {
    border-top: 1px solid black;
    margin-bottom: 20px;
}

.location-container {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 500px;
}

.location {
    width: 49%;
    height: 500px;
    margin-top: -1px;
}

.location-box {
    width: 50%;
    height: 500px;
    background-color: $Secondary-Color;
    text-align: center;
    color: $Primary-Color;
}

.location-title {
    font-size: 80px;
    font-family: $Satisfy;
    margin-top: 80px;
}

.location-content {
    font-size: 30px;
    font-family: $Gabriela;
}


 @media only screen and(max-width: 1054px ) {
     
    .header {
        height: 650px;
        text-align: center;
    }

    .header-title {
        font-size: 180px;
    }

    .header-row {
        display: flex;
        flex-direction: column;
        font-size: 50px;
        float: none;
        margin-right: 0;
    }

    .header-line {
        border-left: 0;;
        border-top: 4px solid $Primary-Color;
        margin-left: 30px;
        margin-right: 30px;
        margin-bottom: 10px;
        margin-top: 10px;
    }

    .font {
        font-size: 100px;
        margin-left: 150px;
        margin-right: 150px;
    }

    .void {
        font-size: 40px;
        margin-left: 50px;
        margin-right: 50px;
    }

    .about-me-box {
        flex-direction: column;
    }   

    .slideshow {
        width: 100%;
    }

    .about-me-container {
        width: 100%;
    }

    .about-me-title {
        font-size: 160px;
    }

    .about-me-author {
        font-size: 80px;
    }

    .about-me-content {
        font-size: xx-large;
    }

    .service-box {
        flex-direction: column-reverse;
        margin-top: 2725px;
    }

    .service-container {
        width: 100%;
    }

    .service-title {
        font-size: 160px;
    }

    .service-content {
        font-size: xx-large;
    }

    .service-img {
        width: 100%;
    }

    .testimonial-title {
        font-size: 160px;
    }

    .testimonial-card p {
        font-size: xx-large;
    }

    .testimonial-img {
        height: 200px;
        width: 200px;
    }

    .calendar-container {
        height: 800px;
    }

    .calendar-container {
        height: 800px;
    }

    .calendar-schedule {
        font-size: 40px;

    }

    .iframe {
        height: 800px;
    }

    .location-container {
        height: 600px;
    }

    .location-box {
        height: 600px;
    }

    .location {
        height: 600px;
    }

    .location-content {
        font-size: 40px;
    }

    .footer-container {
        height: 350px;
    }

    .footer-font {
        font-size: xx-large;
    }

    .footer-plug {
        height: 100px;
        width: 100px;
    }
 }

